@@ -49,32 +49,26 @@ public class ScrollPane extends WidgetGroup {
 	private ScrollPaneStyle style;
 	private Actor widget;
 
-	final Rectangle hScrollBounds = new Rectangle();
-	final Rectangle vScrollBounds = new Rectangle();
-	final Rectangle hKnobBounds = new Rectangle();
-	final Rectangle vKnobBounds = new Rectangle();
-	private final Rectangle widgetAreaBounds = new Rectangle();
+	final Rectangle widgetArea = new Rectangle();
+	final Rectangle hScrollBounds = new Rectangle(), hKnobBounds = new Rectangle();
+	final Rectangle vScrollBounds = new Rectangle(), vKnobBounds = new Rectangle();
 	private final Rectangle widgetCullingArea = new Rectangle();
 	private ActorGestureListener flickScrollListener;
 
 	boolean scrollX, scrollY;
-	boolean vScrollOnRight = true;
-	boolean hScrollOnBottom = true;
+	boolean vScrollOnRight = true, hScrollOnBottom = true;
 	float amountX, amountY;
 	float visualAmountX, visualAmountY;
 	float maxX, maxY;
 	boolean touchScrollH, touchScrollV;
 	final Vector2 lastPoint = new Vector2();
-	float areaWidth, areaHeight;
 	boolean fadeScrollBars = true, smoothScrolling = true, scrollBarTouch = true;
 	float fadeAlpha, fadeAlphaSeconds = 1, fadeDelay, fadeDelaySeconds = 1;
 	boolean cancelTouchFocus = true;
 
 	boolean flickScroll = true;
-	float velocityX, velocityY;
-	float flingTimer;
+	float flingTime = 1f, flingTimer, velocityX, velocityY;
 	private boolean overscrollX = true, overscrollY = true;
-	float flingTime = 1f;
 	private float overscrollDistance = 50, overscrollSpeedMin = 30, overscrollSpeedMax = 200;
 	private boolean forceScrollX, forceScrollY;
 	boolean disableX, disableY;
@@ -127,7 +121,7 @@ public class ScrollPane extends WidgetGroup {
 						draggingPointer = pointer;
 						return true;
 					}
-					setScrollX(amountX + areaWidth * (x < hKnobBounds.x ? -1 : 1));
+					setScrollX(amountX + widgetArea.width * (x < hKnobBounds.x ? -1 : 1));
 					return true;
 				}
 				if (scrollBarTouch && scrollY && vScrollBounds.contains(x, y)) {
@@ -140,7 +134,7 @@ public class ScrollPane extends WidgetGroup {
 						draggingPointer = pointer;
 						return true;
 					}
-					setScrollY(amountY + areaHeight * (y < vKnobBounds.y ? 1 : -1));
+					setScrollY(amountY + widgetArea.height * (y < vKnobBounds.y ? 1 : -1));
 					return true;
 				}
 				return false;
@@ -311,8 +305,8 @@ public class ScrollPane extends WidgetGroup {
 
 		if (smoothScrolling && flingTimer <= 0 && !panning && //
 		// Scroll smoothly when grabbing the scrollbar if one pixel of scrollbar movement is > 10% of the scroll area.
-			((!touchScrollH || (scrollX && maxX / (hScrollBounds.width - hKnobBounds.width) > areaWidth * 0.1f)) //
-				&& (!touchScrollV || (scrollY && maxY / (vScrollBounds.height - vKnobBounds.height) > areaHeight * 0.1f))) //
+			((!touchScrollH || (scrollX && maxX / (hScrollBounds.width - hKnobBounds.width) > widgetArea.width * 0.1f)) && //
+				(!touchScrollV || (scrollY && maxY / (vScrollBounds.height - vKnobBounds.height) > widgetArea.height * 0.1f))) //
 		) {
 			if (visualAmountX != amountX) {
 				if (visualAmountX < amountX)
@@ -373,10 +367,7 @@ public class ScrollPane extends WidgetGroup {
 	}
 
 	public void layout () {
-		final Drawable bg = style.background;
-		final Drawable hScrollKnob = style.hScrollKnob;
-		final Drawable vScrollKnob = style.vScrollKnob;
-
+		Drawable bg = style.background, hScrollKnob = style.hScrollKnob, vScrollKnob = style.vScrollKnob;
 		float bgLeftWidth = 0, bgRightWidth = 0, bgTopHeight = 0, bgBottomHeight = 0;
 		if (bg != null) {
 			bgLeftWidth = bg.getLeftWidth();
@@ -384,22 +375,16 @@ public class ScrollPane extends WidgetGroup {
 			bgTopHeight = bg.getTopHeight();
 			bgBottomHeight = bg.getBottomHeight();
 		}
-
-		float width = getWidth();
-		float height = getHeight();
-
-		float scrollbarHeight = 0;
-		if (hScrollKnob != null) scrollbarHeight = hScrollKnob.getMinHeight();
-		if (style.hScroll != null) scrollbarHeight = Math.max(scrollbarHeight, style.hScroll.getMinHeight());
-		float scrollbarWidth = 0;
-		if (vScrollKnob != null) scrollbarWidth = vScrollKnob.getMinWidth();
-		if (style.vScroll != null) scrollbarWidth = Math.max(scrollbarWidth, style.vScroll.getMinWidth());
-
-		// Get available space size by subtracting background's padded area.
-		areaWidth = width - bgLeftWidth - bgRightWidth;
-		areaHeight = height - bgTopHeight - bgBottomHeight;
+		float width = getWidth(), height = getHeight();
+		widgetArea.set(bgLeftWidth, bgBottomHeight, width - bgLeftWidth - bgRightWidth, height - bgTopHeight - bgBottomHeight);
 
 		if (widget == null) return;
+
+		float scrollbarHeight = 0, scrollbarWidth = 0;
+		if (hScrollKnob != null) scrollbarHeight = hScrollKnob.getMinHeight();
+		if (style.hScroll != null) scrollbarHeight = Math.max(scrollbarHeight, style.hScroll.getMinHeight());
+		if (vScrollKnob != null) scrollbarWidth = vScrollKnob.getMinWidth();
+		if (style.vScroll != null) scrollbarWidth = Math.max(scrollbarWidth, style.vScroll.getMinWidth());
 
 		// Get widget's desired width.
 		float widgetWidth, widgetHeight;
@@ -413,75 +398,56 @@ public class ScrollPane extends WidgetGroup {
 		}
 
 		// Determine if horizontal/vertical scrollbars are needed.
-		scrollX = forceScrollX || (widgetWidth > areaWidth && !disableX);
-		scrollY = forceScrollY || (widgetHeight > areaHeight && !disableY);
+		scrollX = forceScrollX || (widgetWidth > widgetArea.width && !disableX);
+		scrollY = forceScrollY || (widgetHeight > widgetArea.height && !disableY);
 
-		boolean fade = fadeScrollBars;
-		if (!fade) {
-			// Check again, now taking into account the area that's taken up by any enabled scrollbars.
+		// Adjust widget area for scrollbar sizes and check if it causes the other scrollbar to show.
+		if (!scrollbarsOnTop) {
 			if (scrollY) {
-				areaWidth -= scrollbarWidth;
-				if (!scrollX && widgetWidth > areaWidth && !disableX) scrollX = true;
+				widgetArea.width -= scrollbarWidth;
+				if (!vScrollOnRight) widgetArea.x += scrollbarWidth;
+				// Horizontal scrollbar may cause vertical scrollbar to show.
+				if (!scrollX && widgetWidth > widgetArea.width && !disableX) scrollX = true;
 			}
 			if (scrollX) {
-				areaHeight -= scrollbarHeight;
-				if (!scrollY && widgetHeight > areaHeight && !disableY) {
+				widgetArea.height -= scrollbarHeight;
+				if (hScrollOnBottom) widgetArea.y += scrollbarHeight;
+				// Vertical scrollbar may cause horizontal scrollbar to show.
+				if (!scrollY && widgetHeight > widgetArea.height && !disableY) {
 					scrollY = true;
-					areaWidth -= scrollbarWidth;
+					widgetArea.width -= scrollbarWidth;
+					if (!vScrollOnRight) widgetArea.x += scrollbarWidth;
 				}
 			}
 		}
 
-		// The bounds of the scrollable area for the widget.
-		widgetAreaBounds.set(bgLeftWidth, bgBottomHeight, areaWidth, areaHeight);
-
-		if (fade) {
-			// Make sure widget is drawn under fading scrollbars.
-			if (scrollX && scrollY) {
-				areaHeight -= scrollbarHeight;
-				areaWidth -= scrollbarWidth;
-			}
-		} else if (scrollbarsOnTop) {
-			// Make sure widget is drawn under non-fading scrollbars.
-			if (scrollX) widgetAreaBounds.height += scrollbarHeight;
-			if (scrollY) widgetAreaBounds.width += scrollbarWidth;
-		} else {
-			// Offset widget area y for horizontal scrollbar at bottom.
-			if (scrollX && hScrollOnBottom) widgetAreaBounds.y += scrollbarHeight;
-			// Offset widget area x for vertical scrollbar at left.
-			if (scrollY && !vScrollOnRight) widgetAreaBounds.x += scrollbarWidth;
-		}
-
 		// If the widget is smaller than the available space, make it take up the available space.
-		widgetWidth = disableX ? areaWidth : Math.max(areaWidth, widgetWidth);
-		widgetHeight = disableY ? areaHeight : Math.max(areaHeight, widgetHeight);
+		widgetWidth = disableX ? widgetArea.width : Math.max(widgetArea.width, widgetWidth);
+		widgetHeight = disableY ? widgetArea.height : Math.max(widgetArea.height, widgetHeight);
 
-		maxX = widgetWidth - areaWidth;
-		maxY = widgetHeight - areaHeight;
-		// Make sure widget is drawn under fading scrollbars.
-		if (fade && scrollX && scrollY) {
-			maxY -= scrollbarHeight;
-			maxX -= scrollbarWidth;
-		}
+		maxX = widgetWidth - widgetArea.width;
+		maxY = widgetHeight - widgetArea.height;
 		scrollX(MathUtils.clamp(amountX, 0, maxX));
 		scrollY(MathUtils.clamp(amountY, 0, maxY));
 
-		// Set the bounds and scroll knob sizes if scrollbars are needed.
+		// Set the scrollbar and knob bounds.
 		if (scrollX) {
 			if (hScrollKnob != null) {
-				float hScrollHeight = style.hScroll != null ? style.hScroll.getMinHeight() : hScrollKnob.getMinHeight();
-				// The corner gap where the two scroll bars intersect might have to flip from right to left.
-				float boundsX = vScrollOnRight ? bgLeftWidth : bgLeftWidth + scrollbarWidth;
-				float boundsY = hScrollOnBottom ? bgBottomHeight : height - bgTopHeight - hScrollHeight;
-				hScrollBounds.set(boundsX, boundsY, areaWidth, hScrollHeight);
+				float x = scrollbarsOnTop ? bgLeftWidth : widgetArea.x;
+				float y = hScrollOnBottom ? bgBottomHeight : height - bgTopHeight - scrollbarHeight;
+				hScrollBounds.set(x, y, widgetArea.width, scrollbarWidth);
+				if (scrollY && scrollbarsOnTop) {
+					hScrollBounds.width -= scrollbarWidth;
+					if (!vScrollOnRight) hScrollBounds.x += scrollbarWidth;
+				}
+
 				if (variableSizeKnobs)
-					hKnobBounds.width = Math.max(hScrollKnob.getMinWidth(), (int)(hScrollBounds.width * areaWidth / widgetWidth));
+					hKnobBounds.width = Math.max(hScrollKnob.getMinWidth(),
+						(int)(hScrollBounds.width * widgetArea.width / widgetWidth));
 				else
 					hKnobBounds.width = hScrollKnob.getMinWidth();
 				if (hKnobBounds.width > widgetWidth) hKnobBounds.width = 0;
-
 				hKnobBounds.height = hScrollKnob.getMinHeight();
-
 				hKnobBounds.x = hScrollBounds.x + (int)((hScrollBounds.width - hKnobBounds.width) * getScrollPercentX());
 				hKnobBounds.y = hScrollBounds.y;
 			} else {
@@ -491,29 +457,22 @@ public class ScrollPane extends WidgetGroup {
 		}
 		if (scrollY) {
 			if (vScrollKnob != null) {
-				float vScrollWidth = style.vScroll != null ? style.vScroll.getMinWidth() : vScrollKnob.getMinWidth();
-				// The corner gap where the two scroll bars intersect might have to flip from bottom to top.
-				float boundsX, boundsY;
-				if (hScrollOnBottom)
-					boundsY = height - bgTopHeight - areaHeight;
-				else
-					boundsY = bgBottomHeight;
-				if (vScrollOnRight)
-					boundsX = width - bgRightWidth - vScrollWidth;
-				else
-					boundsX = bgLeftWidth;
-				vScrollBounds.set(boundsX, boundsY, vScrollWidth, areaHeight);
+				float x = vScrollOnRight ? width - bgRightWidth - scrollbarWidth : bgLeftWidth;
+				float y = scrollbarsOnTop ? bgBottomHeight : widgetArea.y;
+				vScrollBounds.set(x, y, scrollbarWidth, widgetArea.height);
+				if (scrollX && scrollbarsOnTop) {
+					vScrollBounds.height -= scrollbarHeight;
+					if (hScrollOnBottom) vScrollBounds.y += scrollbarHeight;
+				}
+
 				vKnobBounds.width = vScrollKnob.getMinWidth();
 				if (variableSizeKnobs)
-					vKnobBounds.height = Math.max(vScrollKnob.getMinHeight(), (int)(vScrollBounds.height * areaHeight / widgetHeight));
+					vKnobBounds.height = Math.max(vScrollKnob.getMinHeight(),
+						(int)(vScrollBounds.height * widgetArea.height / widgetHeight));
 				else
 					vKnobBounds.height = vScrollKnob.getMinHeight();
 				if (vKnobBounds.height > widgetHeight) vKnobBounds.height = 0;
-
-				if (vScrollOnRight)
-					vKnobBounds.x = width - bgRightWidth - vScrollKnob.getMinWidth();
-				else
-					vKnobBounds.x = bgLeftWidth;
+				vKnobBounds.x = vScrollOnRight ? width - bgRightWidth - vScrollKnob.getMinWidth() : bgLeftWidth;
 				vKnobBounds.y = vScrollBounds.y + (int)((vScrollBounds.height - vKnobBounds.height) * (1 - getScrollPercentY()));
 			} else {
 				vScrollBounds.set(0, 0, 0, 0);
@@ -530,37 +489,15 @@ public class ScrollPane extends WidgetGroup {
 
 	private void updateWidgetPosition () {
 		// Calculate the widget's position depending on the scroll state and available widget area.
-		float y = widgetAreaBounds.y;
-		if (!scrollY)
-			y -= (int)maxY;
-		else
-			y -= (int)(maxY - visualAmountY);
-
-		float x = widgetAreaBounds.x;
-		if (scrollX) x -= (int)visualAmountX;
-
-		if (!fadeScrollBars && scrollbarsOnTop) {
-			if (scrollX && hScrollOnBottom) {
-				float scrollbarHeight = 0;
-				if (style.hScrollKnob != null) scrollbarHeight = style.hScrollKnob.getMinHeight();
-				if (style.hScroll != null) scrollbarHeight = Math.max(scrollbarHeight, style.hScroll.getMinHeight());
-				y += scrollbarHeight;
-			}
-			if (scrollY && !vScrollOnRight) {
-				float scrollbarWidth = 0;
-				if (style.hScrollKnob != null) scrollbarWidth = style.hScrollKnob.getMinWidth();
-				if (style.hScroll != null) scrollbarWidth = Math.max(scrollbarWidth, style.hScroll.getMinWidth());
-				x += scrollbarWidth;
-			}
-		}
-
+		float x = widgetArea.x - (scrollX ? (int)visualAmountX : 0);
+		float y = widgetArea.y - (int)(scrollY ? maxY - visualAmountY : maxY);
 		widget.setPosition(x, y);
 
 		if (widget instanceof Cullable) {
-			widgetCullingArea.x = widgetAreaBounds.x - x;
-			widgetCullingArea.y = widgetAreaBounds.y - y;
-			widgetCullingArea.width = widgetAreaBounds.width;
-			widgetCullingArea.height = widgetAreaBounds.height;
+			widgetCullingArea.x = widgetArea.x - x;
+			widgetCullingArea.y = widgetArea.y - y;
+			widgetCullingArea.width = widgetArea.width;
+			widgetCullingArea.height = widgetArea.height;
 			((Cullable)widget).setCullingArea(widgetCullingArea);
 		}
 	}
@@ -588,7 +525,7 @@ public class ScrollPane extends WidgetGroup {
 		}
 
 		batch.flush();
-		if (clipBegin(widgetAreaBounds.x, widgetAreaBounds.y, widgetAreaBounds.width, widgetAreaBounds.height)) {
+		if (clipBegin(widgetArea.x, widgetArea.y, widgetArea.width, widgetArea.height)) {
 			drawChildren(batch, parentAlpha);
 			batch.flush();
 			clipEnd();
@@ -793,12 +730,12 @@ public class ScrollPane extends WidgetGroup {
 
 	/** Returns the amount to scroll horizontally when the mouse wheel is scrolled. */
 	protected float getMouseWheelX () {
-		return Math.min(areaWidth, Math.max(areaWidth * 0.9f, maxX * 0.1f) / 4);
+		return Math.min(widgetArea.width, Math.max(widgetArea.width * 0.9f, maxX * 0.1f) / 4);
 	}
 
 	/** Returns the amount to scroll vertically when the mouse wheel is scrolled. */
 	protected float getMouseWheelY () {
-		return Math.min(areaHeight, Math.max(areaHeight * 0.9f, maxY * 0.1f) / 4);
+		return Math.min(widgetArea.height, Math.max(widgetArea.height * 0.9f, maxY * 0.1f) / 4);
 	}
 
 	public void setScrollX (float pixels) {
@@ -889,18 +826,18 @@ public class ScrollPane extends WidgetGroup {
 
 		float amountX = this.amountX;
 		if (centerHorizontal) {
-			amountX = x - areaWidth / 2 + width / 2;
+			amountX = x - widgetArea.width / 2 + width / 2;
 		} else {
-			if (x + width > amountX + areaWidth) amountX = x + width - areaWidth;
+			if (x + width > amountX + widgetArea.width) amountX = x + width - widgetArea.width;
 			if (x < amountX) amountX = x;
 		}
 		scrollX(MathUtils.clamp(amountX, 0, maxX));
 
 		float amountY = this.amountY;
 		if (centerVertical) {
-			amountY = maxY - y + areaHeight / 2 - height / 2;
+			amountY = maxY - y + widgetArea.height / 2 - height / 2;
 		} else {
-			if (amountY > maxY - y - height + areaHeight) amountY = maxY - y - height + areaHeight;
+			if (amountY > maxY - y - height + widgetArea.height) amountY = maxY - y - height + widgetArea.height;
 			if (amountY < maxY - y) amountY = maxY - y;
 		}
 		scrollY(MathUtils.clamp(amountY, 0, maxY));
@@ -934,12 +871,12 @@ public class ScrollPane extends WidgetGroup {
 
 	/** Returns the width of the scrolled viewport. */
 	public float getScrollWidth () {
-		return areaWidth;
+		return widgetArea.width;
 	}
 
 	/** Returns the height of the scrolled viewport. */
 	public float getScrollHeight () {
-		return areaHeight;
+		return widgetArea.height;
 	}
 
 	/** Returns true if the widget is larger than the scroll pane horizontally. */
@@ -1116,7 +1053,7 @@ public class ScrollPane extends WidgetGroup {
 	public void drawDebug (ShapeRenderer shapes) {
 		drawDebugBounds(shapes);
 		applyTransform(shapes, computeTransform());
-		if (clipBegin(widgetAreaBounds.x, widgetAreaBounds.y, widgetAreaBounds.width, widgetAreaBounds.height)) {
+		if (clipBegin(widgetArea.x, widgetArea.y, widgetArea.width, widgetArea.height)) {
 			drawDebugChildren(shapes);
 			shapes.flush();
 			clipEnd();
